--- a/pipelines/compare.html
+++ b/pipelines/compare.html
@@ -18,6 +18,7 @@
             position: relative;
             flex: 1;
             height: 100vh;
+            border: 1px solid #000000;
         }
 
         .map {
