--- a/pipelines/compare3.html
+++ b/pipelines/compare3.html
@@ -102,6 +102,8 @@
             }
         });
 
+        const LOCAL_MAP_BACKGROUND = '#607D8B';
+
         const STYLE_CONFIGS = {
             bw: {
                 highlightColor: ['#FFFFFF', '#FFFFFF', '#FFFFFF', '#FFFFFF'],
@@ -118,7 +120,9 @@
             'hillshade-highlight-color': STYLE_CONFIGS[styleName].highlightColor,
             'hillshade-shadow-color': STYLE_CONFIGS[styleName].shadowColor,
             'hillshade-illumination-direction': [270, 315, 0, 45],
-            'hillshade-illumination-altitude': [30, 30, 30, 30]
+            'hillshade-illumination-altitude': [30, 30, 30, 30],
+            'hillshade-exaggeration': 1,
+            'hillshade-accent-color': '#FFFFFF'
         });
 
         const bwPaint = getHillshadePaint('bw');
@@ -170,6 +174,13 @@
                 },
                 layers: [
                     {
+                        id: 'background',
+                        type: 'background',
+                        paint: {
+                            'background-color': '#FFFFFF'
+                        }
+                    },
+                    {
                         id: 'hillshade',
                         type: 'hillshade',
                         source: 'hillshadeSource',
@@ -195,6 +206,13 @@
                     },
                 },
                 layers: [
+                    {
+                        id: 'background',
+                        type: 'background',
+                        paint: {
+                            'background-color': '#FFFFFF'
+                        }
+                    },
                     {
                         id: 'hillshade',
                         type: 'hillshade',
