--- a/website/index.html
+++ b/website/index.html
@@ -106,9 +106,11 @@
 
     <h3>About</h3>
 
-    <p>Mapterhorn is an open-data project of <a href="https://leichteralsluft.ch/">Leichter als Luft GmbH</a> that was made possible
+    <p>Mapterhorn is an open-data project that was made possible
     thanks to support from the NGI0 Core Fund, a fund established by <a href="https://nlnet.nl/">NLnet</a> with financial support
     from the European Commission's <a href="https://ngi.eu/">Next Generation Internet</a> programme.</p>
+
+    <p>Mapterhorn is currently maintained by <a href="https://github.com/wipfli">Oliver Wipfli</a>. He shares admin access rights to the GitHub organization and the mapterhorn.com domain with <a href="https://github.com/bdon">Brandon Liu</a> and <a href="https://github.com/brawer">Sascha Brawer</a>.</p>
 
     <div class="footer">
         <hr>
