--- a/website/examples/pmtiles/index.html
+++ b/website/examples/pmtiles/index.html
@@ -82,7 +82,7 @@
     <div class="footer">
         <hr>
         <div class="footer-content">
-            <span>Copyright 2025 &middot; Mapterhorn</span>
+            <span>Copyright 2025 - 2026 &middot; Mapterhorn</span>
             <a href="https://www.linkedin.com/company/mapterhorn/">LinkedIn</a>
             <a href="https://bsky.app/profile/mapterhorn.com">Bluesky</a>
             <a href="https://mastodon.social/@mapterhorn">Mastodon</a>
