Add Open Collective banner (#199)

--- a/website/index.html
+++ b/website/index.html
@@ -112,6 +112,10 @@
 
     <p>Mapterhorn is currently maintained by <a href="https://github.com/wipfli">Oliver Wipfli</a>. He shares admin access rights to the GitHub organization and the mapterhorn.com domain with <a href="https://github.com/bdon">Brandon Liu</a> and <a href="https://github.com/brawer">Sascha Brawer</a>.</p>
 
+    <h3>Backers and Sponsors</h3>
+
+    <script src="https://opencollective.com/mapterhorn/banner.js"></script>
+
     <div class="footer">
         <hr>
         <div class="footer-content">
